# swerve

./: .gitignore  Cargo.toml  pom.xml
migrations/: 20210117182957_user_project_file_tag_schema.sql  20210118204942_add_db_functions.sql
migrations/2021-01-02-172732_add_users_table/: up.sql
migrations/2021-01-09-212047_create_file_schema/: down.sql  up.sql
src/: main.rs  models.rs  schema.rs
src/auth/: mod.rs
src/config/: mod.rs
src/errors/: mod.rs
src/handlers/: files.rs  mod.rs  projects.rs  users.rs
src/main/java/com/brahts/swerve/: SwerveApplication.java
src/main/java/com/brahts/swerve/core/: From.java  Query.java  Result.java  Select.java  Selector.java
src/main/java/com/brahts/swerve/core/impl/: BasicFrom.java  BasicQuery.java  BasicResult.java  BasicSelect.java
src/models/: file.rs  image.rs  mod.rs  project.rs  relations.rs  tag.rs  user.rs
src/test/java/com/brahts/swerve/: Repo.java  SwerveApplicationTests.java
