[package]
name = "swerve"
version = "0.1.0"
authors = ["alex <abrackx@gmail.com>"]
edition = "2018"

[dependencies]
actix-web = "3"
actix-service = "1.0.6"
futures = "0.3.8"
sqlx = { version = "0.4.1", features = [ "postgres", "runtime-actix-native-tls", "chrono" ] }
async-std = { version = "1.6", features = [ "attributes" ] }
dotenv = "0.15.0"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
chrono = { version = "0.4.10", features = ["serde"] }
env_logger = "0.8.2"
log = "0.4.11"
jsonwebtoken = "7.2.0"
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }